--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ h4 {
   gap: 1rem;
 }
 
+a {
+  text-decoration: none;
+}
+
 a.admin-link {
   display: inline-block;
   margin-top: 1rem;
@@ -170,7 +174,7 @@ textarea {
 textarea {
   width: 100%;
   min-height: 100px;
-  resize: horizontal;
+  resize: both;
 }
 
 
