--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ header {
   margin-bottom: 0.5rem;
 }
 
-h4 {
+h4.chip {
   font-size: 1.8rem;
   color: var(--color-primary);
   margin-bottom: 0.5rem;
