--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,12 @@ footer {
   border-top: 1px solid #eee;
 }
 
+.admin-link {
+  color: var(--color-a);
+  font-weight: bold;
+  align-items: center;
+}
+
 @media (max-width: 600px) {
   h1 {
     font-size: 1.4rem;
