--- a/css/style.css
+++ b/css/style.css
@@ -26,17 +26,16 @@ body {
   line-height: 1.6;
 }
 
-.menufloat{
-  position: fixed;
-  color: white;
-  bottom: 20px;
-  right: 20px;
-  height: 40px;
-  width: 40px;
-  display: grid;
-  place-items: center;
-  background-color: #f45b91;
-  border-radius: 10px;
+btn-admin
+{
+ font-size: small;
+ text-align: center;
+}
+
+btn-tts
+{
+  font-size: small;
+  text-align: center;
 }
 
 main.app {
@@ -150,6 +149,14 @@ textarea {
   flex: 1;
 }
 
+.categorySelect{
+  padding: 0.6rem;
+  border-radius: var(--radius);
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  width: 125px;
+}
+
 
 .grid {
   display: grid;
@@ -204,6 +211,22 @@ footer {
   border-top: 1px solid #eee;
 }
 
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 1.4rem;
+  }
+
+  button {
+    flex: 1;
+  }
+}
+
+@media (max-width: 768px) {
+  .chip { display: none; }
+}
+
+
 .menufloat {
   position: fixed;
   width: 60px;
@@ -221,16 +244,13 @@ footer {
   border: 0;
   cursor: pointer;
 }
-
 .menufloat:hover {
   box-shadow: 0 0 15px #000;
 }
-
 .rotar45 {
   transform: rotate(45deg);
   background-color: rgb(209, 8, 182);
 }
-
 .subButton-container {
   position: fixed;
   width: 80px;
@@ -240,7 +260,6 @@ footer {
   flex-direction: column;
   justify-content: center;
 }
-
 .buttonChild {
   position: absolute;
   height: 80px;
@@ -259,31 +278,14 @@ footer {
   color: #0C9;
   transition: all 0.3s;
 }
-.buttonChild .fa{
+.buttonChild .fa {
   font-size: 2em;
 }
-
 .buttonChild:hover {
   background-color: #0A7;
   color: #FFF;
   box-shadow: 0 0 15px #000;
 }
-
 .buttonChild.visible {
   opacity: 1;
-}
-
-
-@media (max-width: 600px) {
-  h1 {
-    font-size: 1.4rem;
-  }
-
-  button {
-    flex: 1;
-  }
-}
-
-@media (max-width: 768px) {
-  .chip { display: none; }
 }
