Creación de login, register y su css, adición de botones en el menu flotante, cambiar TTS, ABM, LOG Y REG adentro de la carpeta views para más organización

--- a/views/abm.html
+++ b/views/abm.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="./img/logo_fondo.ico">
-  <link rel="stylesheet" href="css/abm.css">
+  <link rel="stylesheet" href="../css/abm.css">
   <script src="js/main.js"></script>
   <script src="js/abm.js"></script>
   <title>InTouch · Administración de Pictogramas</title>
@@ -17,7 +17,7 @@
         <p>Gestiona tus pictogramas de forma fácil y rápida</p>
       </div>
       <div class="header-actions">
-        <button class="btn-primary" onclick="window.location.href='index.html'">🏠 Ir a la App</button>
+        <button class="btn-primary" onclick="window.location.href='../index.html'">🏠 Ir a la App</button>
         <button class="btn-success" onclick="abrirModal()">➕ Nuevo Pictograma</button>
       </div>
     </header>
