--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,18 @@ btn-tts
   text-align: center;
 }
 
+btn-login
+{
+  font-size: small;
+  text-align: center;
+}
+
+btn-register
+{
+  font-size: small;
+  text-align: center;
+}
+
 main.app {
   max-width: 900px;
   margin: auto;
@@ -279,7 +291,7 @@ footer {
   animation: slideUp 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-admin, .btn-tts {
+.btn-admin, .btn-tts, .btn-login, .btn-register {
   width: 56px;
   height: 56px;
   border-radius: 50%;
@@ -309,6 +321,17 @@ footer {
   animation-delay: 0.2s;
 }
 
+.btn-login {
+  background: linear-gradient(135deg, #4e61cc, #5c44a0);
+  animation-delay: 0.1s;
+}
+
+.btn-register{
+  background: linear-gradient(135deg, #f7a2b7, #e62263);
+  animation-delay: 0.2s;
+}
+
+
 .btn-admin:hover, .btn-tts:hover {
   transform: translateY(-3px) scale(1.1);
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
@@ -321,6 +344,20 @@ footer {
 .btn-tts:hover {
   box-shadow: 0 10px 30px rgba(243, 156, 18, 0.4);
 }
+
+.btn-login:hover{
+  transform: translateY(-3px) scale(1.1);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
+}
+
+.btn-register:hover
+{
+  transform: translateY(-3px) scale(1.1);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
+}
+
+
+
 
 @keyframes slideUp {
   from {
