--- a/views/tts.html
+++ b/views/tts.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="./img/logo_fondo.ico">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <script src="js/main.js"></script>  
   <script src="js/tts.js"></script>
   <title>InTouch - Voz a texto</title>
@@ -15,7 +15,7 @@
       <h1>Texto Libre</h1>
       <p>Escribí y escuchá cualquier texto</p>
     </header>
-    <button class="admin-link" onclick="window.location.href='index.html'">Ir a la App</button>
+    <button class="admin-link" onclick="window.location.href='../index.html'">Ir a la App</button>
     <section class="text-to-speech">
         <label for="voiceSelect">Voz:</label>
         <select id="voiceSelect" aria-label="Seleccionar voz"></select>
