--- a/views/login.html
+++ b/views/login.html
@@ -3,17 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Login | InTouch</title>
+  <link rel="icon" type="image/x-icon" href="../img/logo_fondo.ico">
   <link rel="stylesheet" href="../css/auth.css">
 </head>
 <body>
-  <div class="container">
-    <h2>Iniciar sesión</h2>
-    <form method="POST" action="../php/login.php">
-      <input type="email" name="email" placeholder="Correo electrónico" required>
-      <input type="password" name="password" placeholder="Contraseña" required>
-      <button type="submit">Entrar</button>
-    </form>
-    <p>¿No tenés cuenta? <a href="register.html">Crear una</a></p>
-  </div>
+  <img src="../img/logo.png" alt="Logo InTouch" class="logo"/>
+  <h2>Iniciar sesión</h2>
+    <div class="container">
+      <h2>Iniciar sesión</h2>
+      <form method="POST" action="../php/login.php">
+        <input type="email" name="email" placeholder="Correo electrónico" required>
+        <input type="password" name="password" placeholder="Contraseña" required>
+        <button type="submit">Entrar</button>
+      </form>
+      <p>¿No tenés cuenta? <a href="register.html">Crear una</a></p>
+    </div>
 </body>
 </html>
