--- a/views/register.html
+++ b/views/register.html
@@ -15,6 +15,10 @@
         <input type="text" name="nombre" placeholder="Nombre" required>
         <input type="email" name="email" placeholder="Correo electrónico" required>
         <input type="password" name="password" placeholder="Contraseña" required>
+        <label for="imagen">Avatar (opcional)</label>
+          <div class="file-input-wrapper">
+            <input type="file" id="imagen" name="imagen" accept="image/*">
+          </div>
         <button type="submit">Registrarme</button>
         </form>
         <p>¿Ya tenés cuenta? <a href="login.html">Iniciar sesión</a></p>
