--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ footer {
   animation: slideUp 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-admin, .btn-tts, .btn-login, .btn-register {
+.btn-admin, .btn-tts, .btn-login, .btn-register, .btn-logout {
   width: 56px;
   height: 56px;
   border-radius: 50%;
@@ -327,6 +327,11 @@ footer {
 }
 
 .btn-register{
+  background: linear-gradient(135deg, #ead3eb, #d88ce2);
+  animation-delay: 0.2s;
+}
+
+.btn-logout{
   background: linear-gradient(135deg, #f7a2b7, #e62263);
   animation-delay: 0.2s;
 }
@@ -351,6 +356,12 @@ footer {
 }
 
 .btn-register:hover
+{
+  transform: translateY(-3px) scale(1.1);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
+}
+
+.btn-logout:hover
 {
   transform: translateY(-3px) scale(1.1);
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
