--- a/views/register.html
+++ b/views/register.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Registrarse | InTouch</title>
   <link rel="icon" type="image/x-icon" href="../img/logo_fondo.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="../img/logo_fondo.ico">
   <link rel="stylesheet" href="../css/auth.css">
 </head>
 <body>
