--- a/views/abm.html
+++ b/views/abm.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="./img/logo_fondo.ico">
+  <link rel="icon" type="image/x-icon" href="../img/logo_fondo.ico">
   <link rel="stylesheet" href="../css/abm.css">
-  <script src="js/main.js"></script>
-  <script src="js/abm.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/abm.js"></script>
   <title>InTouch · Administración de Pictogramas</title>
 </head>
 <body>
