cambio de color de fondo de abm

--- a/css/abm.css
+++ b/css/abm.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #667eea;
-  --secondary-color: #764ba2;
+  --primary-color: #d9def1;
+  --secondary-color: #b8accc;
   --success-color: #4ecdc4;
   --danger-color: #ff6b6b;
   --warning-color: #f39c12;
