--- a/views/abm.html
+++ b/views/abm.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="../img/logo_fondo.ico">
   <link rel="stylesheet" href="../css/abm.css">
-  <script src="../js/main.js"></script>
-  <script src="../js/abm.js"></script>
   <title>InTouch · Administración de Pictogramas</title>
+  <!-- Asegurarnos de que los scripts se cargan desde la raíz del proyecto -->
+  <script src="/js/main.js"></script>
+  <script src="/js/abm.js"></script>
 </head>
 <body>
   <main class="admin-app">
