--- a/css/abm.css
+++ b/css/abm.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #d9def1;
-  --secondary-color: #b8accc;
+  --primary-color: #eef0f5;
+  --secondary-color: #e4dbe9;
   --success-color: #4ecdc4;
   --danger-color: #ff6b6b;
   --warning-color: #f39c12;
