--- a/views/tts.html
+++ b/views/tts.html
@@ -21,8 +21,9 @@ if (!isset($_SESSION['usuario_id'])) {
 <body>
   <main class="app" role="main">
     <header>
-      <img src="../img/logo.png" alt="Logo InTouch" class="logo"/>
-      <h4 class="chip">¡Hola, <?php echo htmlspecialchars($_SESSION['usuario']); ?>!</h4>
+      <img src="../img/logo.png" alt="Logo InTouch" class="logo-large"/>
+      <h1 class="title-large">InTouch</h1>
+      <p class="subtitle">Texto a Voz Libre</p>
     </header>
 
     <section class="bar" aria-label="Información">
